Add contact et demo page

--- a/public/assets/css/custome.css
+++ b/public/assets/css/custome.css
@@ -8,6 +8,10 @@
 background-color: #1b75bb;
 color: #ffffff; /* Change the text color on hover if needed */
 }
+
+.formreduis {
+    border-radius: 3px;
+}
   
 
 
