--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -626,11 +626,19 @@ section {
   padding-bottom: 30px;
 }
 
-/* .about .container {
+.about .container {
+  box-shadow: 0 5px 25px 0 rgba(214, 215, 216, 0.6);
+}
+
+/* .about-sap .container {
   box-shadow: 0 5px 25px 0 rgba(214, 215, 216, 0.6);
 } */
 
+
 .about .video-box img {
+  padding: 15px 0;
+}
+.about-sap .video-box img {
   padding: 15px 0;
 }
 
@@ -642,6 +650,10 @@ section {
 }
 
 .about .about-content {
+  padding: 40px;
+}
+
+.about-sap .about-content {
   padding: 40px;
 }
 
@@ -661,7 +673,24 @@ section {
   transition: 0.5s;
 }
 
+.about-sap .icon-box .icon {
+  float: left;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 72px;
+  height: 72px;
+  background: #f1f7fb;
+  border-radius: 6px;
+  transition: 0.5s;
+}
+
 .about .icon-box .icon i {
+  color: #428bca;
+  font-size: 32px;
+}
+
+.about-sap .icon-box .icon i {
   color: #428bca;
   font-size: 32px;
 }
@@ -670,11 +699,27 @@ section {
   background: #428bca;
 }
 
+.about-sap .icon-box:hover .icon {
+  background: #428bca;
+}
+
 .about .icon-box:hover .icon i {
   color: #fff;
 }
 
+.about-sap .icon-box:hover .icon i {
+  color: #fff;
+}
+
 .about .icon-box .title {
+  margin-left: 95px;
+  font-weight: 700;
+  margin-bottom: 10px;
+  font-size: 18px;
+  text-transform: uppercase;
+}
+
+.about-sap .icon-box .title {
   margin-left: 95px;
   font-weight: 700;
   margin-bottom: 10px;
@@ -697,7 +742,26 @@ section {
   font-size: 14px;
 }
 
+.about-sap .icon-box .title a {
+  color: #343a40;
+  transition: 0.3s;
+}
+
+.about-sap .icon-box .title a:hover {
+  color: #428bca;
+}
+
+.about-sap .icon-box .description {
+  margin-left: 95px;
+  line-height: 24px;
+  font-size: 14px;
+}
+
 .about .video-box {
+  position: relative;
+}
+
+.about-sap .video-box {
   position: relative;
 }
 
@@ -713,7 +777,34 @@ section {
   overflow: hidden;
 }
 
+.about-sap .play-btn {
+  width: 94px;
+  height: 94px;
+  background: radial-gradient(#428bca 50%, rgba(66, 139, 202, 0.4) 52%);
+  border-radius: 50%;
+  display: block;
+  position: absolute;
+  left: calc(50% - 47px);
+  top: calc(50% - 47px);
+  overflow: hidden;
+}
+
 .about .play-btn::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-40%) translateY(-50%);
+  width: 0;
+  height: 0;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+  border-left: 15px solid #fff;
+  z-index: 100;
+  transition: all 400ms cubic-bezier(0.55, 0.055, 0.675, 0.19);
+}
+
+.about-sap .play-btn::after {
   content: "";
   position: absolute;
   left: 50%;
@@ -746,12 +837,52 @@ section {
   background: rgba(198, 16, 0, 0);
 }
 
+.about-sap .play-btn::before {
+  content: "";
+  position: absolute;
+  width: 120px;
+  height: 120px;
+  animation-delay: 0s;
+  animation: pulsate-btn 2s;
+  animation-direction: forwards;
+  animation-iteration-count: infinite;
+  animation-timing-function: steps;
+  opacity: 1;
+  border-radius: 50%;
+  border: 5px solid rgba(66, 139, 202, 0.7);
+  top: -15%;
+  left: -15%;
+  background: rgba(198, 16, 0, 0);
+}
+
 .about .play-btn:hover::after {
   border-left: 15px solid #428bca;
   transform: scale(20);
 }
 
+.about-sap .play-btn:hover::after {
+  border-left: 15px solid #428bca;
+  transform: scale(20);
+}
+
 .about .play-btn:hover::before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-40%) translateY(-50%);
+  width: 0;
+  height: 0;
+  border: none;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+  border-left: 15px solid #fff;
+  z-index: 200;
+  animation: none;
+  border-radius: 0;
+}
+
+.about-sap .play-btn:hover::before {
   content: "";
   position: absolute;
   left: 50%;
@@ -1493,3 +1624,4 @@ section {
 #footer .credits a {
   color: #9eccf4;
 }
+
