--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1322,17 +1322,17 @@ section {
   padding: 12px 15px;
 }
 
-.contact .php-email-form button[type=submit] {
+/* .contact .php-email-form button[type=submit] {
   background: #428bca;
   border: 0;
   padding: 10px 30px;
   color: #fff;
   transition: 0.4s;
-}
+} */
 
-.contact .php-email-form button[type=submit]:hover {
+/* .contact .php-email-form button[type=submit]:hover {
   background: #629fd3;
-}
+} */
 
 @keyframes animate-loading {
   0% {
@@ -1492,4 +1492,13 @@ section {
 
 #footer .credits a {
   color: #9eccf4;
+}
+
+.butForm{
+  background: #428bca;
+  border: 0;
+  padding: 10px 30px;
+  color: #fff;
+  transition: 0.4s;
+  border-radius: 3px;
 }
