--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -459,13 +459,13 @@ h6,
 #hero .carousel-inner .carousel-item,
 #hero .carousel-inner .active.carousel-item-start,
 #hero .carousel-inner .active.carousel-item-end {
-  opacity: 0;
+  /* opacity: 1; */
 }
 
 #hero .carousel-inner .active,
 #hero .carousel-inner .carousel-item-next.carousel-item-start,
 #hero .carousel-inner .carousel-item-prev.carousel-item-end {
-  opacity: 1;
+  /* opacity: 1; */
   transition: 0.5s;
 }
 
